--- a/SustainabilityAppV1/Base.lproj/LaunchScreen.xib
+++ b/SustainabilityAppV1/Base.lproj/LaunchScreen.xib
@@ -10,10 +10,10 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Leaf.png" translatesAutoresizingMaskIntoConstraints="NO" id="r5s-Yl-3hQ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Leaf.png" translatesAutoresizingMaskIntoConstraints="NO" id="r5s-Yl-3hQ">
                     <rect key="frame" x="177" y="167" width="127" height="68"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Zig Zag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8T-a6-DCE">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Zig Zag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8T-a6-DCE">
                     <rect key="frame" x="163" y="243" width="154" height="61"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="36"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -25,12 +25,14 @@
             </subviews>
             <color key="backgroundColor" red="0.5332189048" green="0.79878566579999999" blue="0.47453487690000001" alpha="0.71999999999999997" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="r5s-Yl-3hQ" secondAttribute="centerX" constant="-0.5" id="DHO-DH-3rQ"/>
-                <constraint firstItem="r5s-Yl-3hQ" firstAttribute="centerX" secondItem="R8T-a6-DCE" secondAttribute="centerX" constant="0.5" id="Hkd-tK-I0q"/>
+                <constraint firstAttribute="centerX" secondItem="r5s-Yl-3hQ" secondAttribute="centerX" id="Kif-jR-k6u"/>
+                <constraint firstAttribute="centerX" secondItem="R8T-a6-DCE" secondAttribute="centerX" id="UZu-Sp-KCd"/>
+                <constraint firstAttribute="centerY" secondItem="r5s-Yl-3hQ" secondAttribute="centerY" constant="50" id="X9l-U9-8wU"/>
+                <constraint firstAttribute="centerY" secondItem="R8T-a6-DCE" secondAttribute="centerY" constant="-10" id="dJa-ZD-zKm"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="525" y="354"/>
         </view>
     </objects>
     <resources>
